# PP_ASGD

./: CMakeLists.txt  Client.cpp  Client.h  Constants.cpp  Constants.h  MnistCNN.cpp  MnistCNN.h  Model.cpp  Model.h  Params.cpp  Params.h  README.md  Server.cpp  Server.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  Utils.cpp  Utils.h  main.cpp
